--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <h3>This is new repo.</h3>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repellat, voluptatibus!</p>
 </body>
 </html>
