--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 <body>
     <h3>This is new repo.</h3>
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repellat, voluptatibus!</p>
-    <p>Lorem ipsum dolor sit amet.</p>
+    <p>Lorem ipsum dolor sit amet.(button)</p>
 </body>
 </html>
